fixed vertical alignment issue in search display

--- a/bookworm-client/src/App.css
+++ b/bookworm-client/src/App.css
@@ -77,11 +77,13 @@ margin-top: 10px;
     display: inline;
     font-size: 14px;
     cursor: pointer;
+    margin-top: 10px;
   }
 
 .thumbnail {
   height: 220px;
   width: 160px;
+  margin-top: 10px;
 }
 .book-container {
   display: flex;
@@ -89,12 +91,12 @@ margin-top: 10px;
   width: 160px;
   margin-right: 15px;
   margin-left: 15px;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
   
 }
 .column-container {
   margin-bottom: 0px;
- 
+  margin-top: auto;
 }
 .view-container {
   display:flex;
@@ -102,7 +104,7 @@ margin-top: 10px;
   flex-wrap: wrap;
   justify-content: space-between;
   max-width: 700px;
-  padding: 10px;
+  padding: 30px;
   margin: auto;
   border: 2px solid rgb(86,91,94);
 }
@@ -111,5 +113,9 @@ margin-top: 10px;
   margin-left: 250px;
   margin-bottom: 0px;
   margin-top: 50px
+}
+.book-text {
+  color: rgb(86,91,94);
+  margin: 5px;
 }
 
